@@ -1,3 +1,5 @@
+tags
+*~
 *.gcda
 *.gcno
 *.gcov
@@ -188,6 +190,8 @@ tests/Makefile
 tests/Makefile.in
 tests/Test_encoding
 tests/Test_encoding.o
+tests/Test_strings.o
+tests/Test_strings
 tests/Test_errors
 tests/Test_errors.o
 tests/Test_indefinite
